fixed trash alias

--- a/.common_rc
+++ b/.common_rc
@@ -32,7 +32,7 @@ alias hn='hostname'
 alias treel='tree -L'
 alias treel2="tree -L 2"
 alias vimro="vim -R"
-alias rm='trash'
+alias rm='trash-put'
 alias chmox="chmod +x"
 alias lsa="ls -alh"
 alias reproot='cd $(git rev-parse --show-toplevel)'
