--- a/.common_rc
+++ b/.common_rc
@@ -54,7 +54,13 @@ fi
 alias chmox="chmod +x"
 alias lsa="ls -alh"
 alias reproot='cd $(git rev-parse --show-toplevel)'
+alias rr='reproot'
 alias projroot="cd $( pwd | sed 's/\/deps\/.*//g' )"
+alias shopen='gnome-open'
+alias pdl='pdflatex'
+alias ptp='ptpython'
+alias matlab_remote='/usr/local/MATLAB/R2014b/bin/matlab -nosplash -nodesktop -minimize' 
+
 
 alias bfg='java -jar ~/bin/bfg-1.11.5.jar'
 alias ump='update_matlab_project `pwd`'
